2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/introduction.itely: small corrections.

	* scm/translator-property-description.scm (tablatureFormat):
	describe property.

	* lily/parser.yy (property_def): Ugh. Switch off
	internal-type-checking for autoBeamSettings.

2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/mensural-ligature-engraver.cc:
	* scm/grob-property-description.scm: Add head-width, join-left,
	primitive.
	
	* lily/mensural-ligature.cc: 
	* lily/ligature-bracket.cc: 
	* scm/grob-property-description.scm: 

	* lily/ligature-head.cc: Add ligature-primitive-callback.

	* input/test/beam-control.ly: 
	* input/test/bar-script-visibility.ly: Update.

	* lily/music.cc (internal_set_mus_property): [!NDEBUG] Remove, use
	abort instead of assert.

2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/ambitus.ly: Comment out ambitus until anal-proof.

	* buildscripts/mf-to-table.py (write_fontlist): change
	extra-extent-X extra-X-extent.

	* scm/music-property-description.scm (label): Typecheck markup?
	(was string?).

	* Documentation/user/refman.itely (Tablatures basic): Change
	TabStaff @lilypond snippets to @example until TabStaff is
	anal-proof.

2002-08-18  Rune Zedeler <rune@zedeler.dk>

	* mf/feta-klef.mf: (another) white pixels bug in g-clef fixed.
	
2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/lily-guile.hh (LY_DEFINE_NOARGS): Remove.

	* lily/grob-property.cc (internal_set_grob_property): Revert oops.

	* lily/input.cc (message): 
	* flower/warn.cc (message): Flush output.

	* po/lilypond.pot: Run make po-replace.

	* Documentation/user/GNUmakefile (LILYPOND_BOOK_FLAGS): be anal
	with type checks.

	* Documentation/GNUmakefile (LILYPOND_BOOK_FLAGS): 
	* input/regression/GNUmakefile (LILYPOND_BOOK_FLAGS):
	* input/test/GNUmakefile (LILYPOND_BOOK_FLAGS): 
	* Documentation/user/invoking.itexi: 
	* lily/scm-option.cc:
	* lily/main.cc: Debugging options: ly-set-option (was:
	set-lily-option).